# slop-no-more

./: CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: from-the-wild.md  github-action.yml  prompt_vs_regex.py  sample-slop.md  side-by-side.md
references/: moves.md
scripts/: slop_scan.py
src/slop_no_more/: __init__.py  cli.py  scanner.py
tests/: conftest.py  test_scanner.py
