[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slop-no-more"
version = "0.1.0"
description = "Deterministic, explainable, zero-model prose linting for the AI era. Rhetorical-move detection with repair rules and CI exit codes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Caleb Stacy" }]
keywords = ["ai-slop", "prose-lint", "writing", "style", "rhetoric", "ci", "deterministic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
slop = "slop_no_more.cli:main"

[project.urls]
Homepage = "https://github.com/REPLACE-OWNER/slop-no-more"
Issues = "https://github.com/REPLACE-OWNER/slop-no-more/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
